# opensparse

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.cmake
src/: CMakeLists.txt  configure.cmake  sparse_building_config.h.in
src/api/: csr_desc.hpp  spmv.h
